--- a/ui/assets/package.json
+++ b/ui/assets/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "None"
+  "license": "None",
+  "devDependencies": {
+    "gulp-plumber": "^1.0.1"
+  }
 }
