--- a/ui/assets/package.json
+++ b/ui/assets/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "None",
   "devDependencies": {
+    "babel-preset-react": "^6.16.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-plumber": "^1.0.1",
     "gulp-sass": "^2.3.2"
   }
