--- a/ui/src/package.json
+++ b/ui/src/package.json
@@ -12,7 +12,17 @@
     "babel-preset-react": "^6.16.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.1",
     "gulp-plumber": "^1.0.1",
     "gulp-sass": "^2.3.2"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.20.0",
+    "bootstrap": "^3.3.7",
+    "history": "^3.0.0",
+    "jquery": "^3.1.1",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-router": "^3.0.0"
   }
 }
