--- a/ui/src/package.json
+++ b/ui/src/package.json
@@ -24,6 +24,8 @@
     "moment": "^2.17.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-router": "^3.0.0"
+    "react-router": "^3.0.0",
+    "video.js": "^5.14.1",
+    "videojs-contrib-hls": "^4.0.3"
   }
 }
