--- a/ui/src/package.json
+++ b/ui/src/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^3.3.7",
     "history": "^3.0.0",
     "jquery": "^3.1.1",
+    "lodash": "^4.17.3",
     "moment": "^2.17.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
