--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,5 +5,6 @@ jobs:
       - image: shimberger/docker-ci-builder
     steps:
       - checkout
+      - run: cd ui && npm install
       - run: go get -d ./...
       - run: ./scripts/release_snapshot.sh
