--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,5 +7,6 @@ jobs:
       - checkout
       - run: cd ui && npm install
       - run: go get -u github.com/jteeuwen/go-bindata/...
+      - run: go get -u github.com/konsorten/go-windows-terminal-sequences
       - run: go get -d ./...
       - run: ./scripts/release_snapshot.sh
