--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,4 +15,5 @@ jobs:
             paths:
               - ui/node_modules
             key: npm-v1-{{ checksum "ui/package-lock.json" }}
+      - run: go get -u github.com/jteeuwen/go-bindata/...
       - run: ./scripts/release_snapshot.sh
