--- a/ui/package.json
+++ b/ui/package.json
@@ -8,16 +8,17 @@
 		}
 	},
 	"dependencies": {
-		"@material-ui/core": "^3.3.2",
-		"@material-ui/icons": "^3.0.1",
+		"@material-ui/core": "^4.0.2",
+		"@material-ui/icons": "^4.0.1",
+		"classnames": "^2.2.6",
 		"lodash": "^4.17.11",
-		"moment": "^2.22.2",
-		"react": "^16.6.0",
-		"react-dom": "^16.6.0",
+		"moment": "^2.24.0",
+		"react": "^16.8.6",
+		"react-dom": "^16.8.6",
 		"react-router": "^4.3.1",
 		"react-router-dom": "^4.3.1",
 		"typeface-roboto": "0.0.54",
-		"video.js": "^7.2.4"
+		"video.js": "^7.5.4"
 	},
 	"scripts": {
 		"start": "react-scripts-ts start",
@@ -26,13 +27,13 @@
 		"eject": "react-scripts-ts eject"
 	},
 	"devDependencies": {
-		"@types/jest": "^23.3.9",
-		"@types/node": "^10.12.2",
-		"@types/react": "^16.4.18",
-		"@types/react-dom": "^16.0.9",
-		"@types/react-router": "^4.4.0",
-		"@types/react-router-dom": "^4.3.1",
+		"@types/jest": "^23.3.14",
+		"@types/node": "^10.14.8",
+		"@types/react": "^16.8.19",
+		"@types/react-dom": "^16.8.4",
+		"@types/react-router": "^4.4.5",
+		"@types/react-router-dom": "^4.3.3",
 		"react-scripts-ts": "3.1.0",
-		"typescript": "^3.1.6"
+		"typescript": "^3.5.1"
 	}
 }
