--- a/ui/package.json
+++ b/ui/package.json
@@ -1,39 +1,53 @@
 {
-	"name": "ui",
-	"version": "0.1.0",
-	"private": true,
-	"proxy": {
-		"/api": {
-			"target": "http://localhost:8080"
-		}
-	},
-	"dependencies": {
-		"@material-ui/core": "^4.8.3",
-		"@material-ui/icons": "^4.5.1",
-		"classnames": "^2.2.6",
-		"lodash": "^4.17.15",
-		"moment": "^2.24.0",
-		"react": "^16.12.0",
-		"react-dom": "^16.12.0",
-		"react-router": "^4.3.1",
-		"react-router-dom": "^4.3.1",
-		"typeface-roboto": "0.0.54",
-		"video.js": "^7.6.6"
-	},
-	"scripts": {
-		"start": "react-scripts-ts start",
-		"build": "react-scripts-ts build",
-		"test": "react-scripts-ts test --env=jsdom",
-		"eject": "react-scripts-ts eject"
-	},
-	"devDependencies": {
-		"@types/jest": "^23.3.14",
-		"@types/node": "^10.17.13",
-		"@types/react": "^16.9.17",
-		"@types/react-dom": "^16.9.4",
-		"@types/react-router": "^4.4.5",
-		"@types/react-router-dom": "^4.3.5",
-		"react-scripts-ts": "3.1.0",
-		"typescript": "^3.7.4"
-	}
+  "name": "ui",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@material-ui/core": "^4.8.3",
+    "@material-ui/icons": "^4.5.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "@types/classnames": "^2.2.10",
+    "@types/jest": "^24.9.1",
+    "@types/lodash": "^4.14.157",
+    "@types/node": "^12.12.47",
+    "@types/react": "^16.9.41",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router": "^4.4.5",
+    "@types/react-router-dom": "^4.3.5",
+    "classnames": "^2.2.6",
+    "http-proxy-middleware": "^1.0.4",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "3.4.1",
+    "typeface-roboto": "0.0.54",
+    "typescript": "^3.7.5",
+    "video.js": "^7.6.6"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
