--- a/ui/package.json
+++ b/ui/package.json
@@ -3,30 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.5",
+    "@mui/styles": "^5.2.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/classnames": "^2.3.1",
     "@types/jest": "^24.9.1",
     "@types/lodash": "^4.14.170",
-    "@types/node": "^12.20.15",
-    "@types/react": "^16.14.8",
-    "@types/react-dom": "^16.9.13",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "@types/react-router": "^4.4.5",
     "@types/react-router-dom": "^4.3.5",
     "classnames": "^2.3.1",
-    "http-proxy-middleware": "^1.3.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "3.4.1",
-    "typeface-roboto": "0.0.54",
-    "typescript": "^3.9.10",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "^5.0.0",
+    "typeface-roboto": "^1.1.13",
     "video.js": "^7.12.3"
   },
   "scripts": {
@@ -49,5 +51,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node": "^16.11.17",
+    "http-proxy-middleware": "^2.0.1",
+    "typescript": "^4.5.4"
   }
 }
