Removed CircleCI and added new architectures

--- a/.github/workflows/build_and_release_snapshot.yml
+++ b/.github/workflows/build_and_release_snapshot.yml
@@ -116,6 +116,8 @@ jobs:
       run: |
         set -euo pipefail
         aws s3 cp --region us-east-1 './gohls-osx-${{ env.tag_name }}.tar.gz' s3://gohls/
+        aws s3 cp --region us-east-1 './gohls-osx-arm64-${{ env.tag_name }}.tar.gz' s3://gohls/
         aws s3 cp --region us-east-1 './gohls-linux-386-${{ env.tag_name }}.tar.gz' s3://gohls/
         aws s3 cp --region us-east-1 './gohls-linux-amd64-${{ env.tag_name }}.tar.gz' s3://gohls/
+        aws s3 cp --region us-east-1 './gohls-linux-arm64-${{ env.tag_name }}.tar.gz' s3://gohls/
         aws s3 cp --region us-east-1 './gohls-windows-amd64-${{ env.tag_name }}.tar.gz' s3://gohls/
